clusters/9ka/nextcloud/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud
  namespace: ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/instance: nextcloud
  ingress:
  - fromEntities:
    - host
    toPorts:
    - ports:
      - port: http
        protocol: TCP
