clusters/9ka/nextcloud/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud
  namespace: ingress
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/instance: nextcloud
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress
      podSelector:
        matchLabels:
          app.kubernetes.io/component: controller
          app.kubernetes.io/instance: ingress-nginx
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: http
  egress: []
